Fixed mug shot view on mobile

--- a/scss/modules/_front-cover.scss
+++ b/scss/modules/_front-cover.scss
@@ -193,7 +193,7 @@ body {
     padding-bottom: 0;
     & .container {
       padding-top: 30%;
-      margin-bottom: -10%;
+      margin-bottom: 5%;
     }
     & span, & h1 {
       background-color: rgba(73,69,66,0.6);
